--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
     },
 
     "extra": {
-        "description": "The dummy plugin for Cetera CMS"
+        "description": "The dummy plugin for Fastsite CMS"
     }
 }
